--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -27,11 +27,18 @@
 }
 .label {
   margin-right: 10px;
+  font-size: 32px;
+}
+.select {
+  height: 100%;
+  width: 30%;
 }
 .select_m {
   display: none;
 }
 .select_d {
+  display: flex;
+  align-items: center;
   width: 80%;
   margin-top: 50px;
 }
@@ -69,12 +76,16 @@
     margin-left: auto;
     padding-top: 20px;
   }
+  .label {
+    font-size: 16px;
+  }
   .select_m {
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-top: 20px;
     margin-bottom: 20px;
     width: 100%;
-    text-align: center;
   }
   .select_d {
     display: none;
